--- a/frontend/src/styles/components/_searchbar.scss
+++ b/frontend/src/styles/components/_searchbar.scss
@@ -235,7 +235,7 @@
   width: 308px;
 
   @media (min-width: 1024px) {
-    margin-left: 5px;
+    // margin-left: 5px;
     width: 23.5%;
   }
 }
@@ -243,7 +243,7 @@
 .search-filters-box__input-dates {
   @media (min-width: 1024px) {
     width: 23.5%;
-    margin-right: 6px;
+    margin-right: 0px;
   }
 }
 
@@ -292,7 +292,7 @@
   padding-right: 28px;
   cursor: pointer;
   @media (min-width: 1024px) {
-    width: 94%; // to repeat the same gap like between 2 buttons on the right side of bar.
+    width: 100%; // to repeat the same gap like between 2 buttons on the right side of bar.
   }
   // @media (min-width: 1024px) and (max-width: 1199px) {
   //   width: 308px;
@@ -308,7 +308,7 @@
   padding-right: 28px;
   cursor: pointer;
   @media (min-width: 1024px) {
-    width: 100%; // to repeat the same gap like between 2 buttons on the right side of bar.
+    width: 98%; // to repeat the same gap like between 2 buttons on the right side of bar.
   }
   // @media (min-width: 1024px) and (max-width: 1199px) {
   //   width: 308px;
